parser.output
Terminals unused in grammar

   '>'
   '<'
   '='
   '-'
   '+'
   '*'
   '/'
   '^'


State 46 conflicts: 2 shift/reduce
State 51 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 program: $@1 commands

    3 commands: command ';' commands
    4         | %empty

    5 $@2: %empty

    6 $@3: %empty

    7 $@4: %empty

    8 command: CARREGA $@2 IDENTIFIER $@3 IDENTIFIER $@4 exp exp

    9 $@5: %empty

   10 command: FALTANTES $@5 IDENTIFIER exp
   11        | ESCALONAR IDENTIFIER
   12        | TRANSFORMAR IDENTIFIER IDENTIFIER
   13        | DIVISAO IDENTIFIER NUMINT

   14 $@6: %empty

   15 command: CLASSIFICADOR $@6 modelo

   16 $@7: %empty

   17 command: REGRESSOR $@7 modelo
   18        | TREINAMENTO IDENTIFIER IDENTIFIER
   19        | PREDICAO IDENTIFIER IDENTIFIER
   20        | RESULTADO resultados

   21 modelo: IDENTIFIER IDENTIFIER param param

   22 resultados: IDENTIFIER ACURACIA
   23           | IDENTIFIER F1
   24           | IDENTIFIER MSE
   25           | IDENTIFIER R2

   26 exp: NUMINT
   27    | IDENTIFIER
   28    | %empty

   29 param: NUMINT
   30      | IDENTIFIER
   31      | %empty


Terminals, with rules where they appear

$end (0) 0
'*' (42)
'+' (43)
'-' (45)
'/' (47)
';' (59) 3
'<' (60)
'=' (61)
'>' (62)
'^' (94)
error (256)
NUMINT (258) 13 26 29
IDENTIFIER (259) 8 10 11 12 13 18 19 21 22 23 24 25 27 30
CARREGA (260) 8
TREINAMENTO (261) 18
PREDICAO (262) 19
RESULTADO (263) 20
FALTANTES (264) 10
DIVISAO (265) 13
ESCALONAR (266) 11
TRANSFORMAR (267) 12
CLASSIFICADOR (268) 15
REGRESSOR (269) 17
ACURACIA (270) 22
F1 (271) 23
MSE (272) 24
R2 (273) 25


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
program (29)
    on left: 2, on right: 0
$@1 (30)
    on left: 1, on right: 2
commands (31)
    on left: 3 4, on right: 2 3
command (32)
    on left: 8 10 11 12 13 15 17 18 19 20, on right: 3
$@2 (33)
    on left: 5, on right: 8
$@3 (34)
    on left: 6, on right: 8
$@4 (35)
    on left: 7, on right: 8
$@5 (36)
    on left: 9, on right: 10
$@6 (37)
    on left: 14, on right: 15
$@7 (38)
    on left: 16, on right: 17
modelo (39)
    on left: 21, on right: 15 17
resultados (40)
    on left: 22 23 24 25, on right: 20
exp (41)
    on left: 26 27 28, on right: 8 10
param (42)
    on left: 29 30 31, on right: 21


State 0

    0 $accept: . program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    2 program: $@1 . commands

    CARREGA        shift, and go to state 4
    TREINAMENTO    shift, and go to state 5
    PREDICAO       shift, and go to state 6
    RESULTADO      shift, and go to state 7
    FALTANTES      shift, and go to state 8
    DIVISAO        shift, and go to state 9
    ESCALONAR      shift, and go to state 10
    TRANSFORMAR    shift, and go to state 11
    CLASSIFICADOR  shift, and go to state 12
    REGRESSOR      shift, and go to state 13

    $default  reduce using rule 4 (commands)

    commands  go to state 14
    command   go to state 15


State 3

    0 $accept: program $end .

    $default  accept


State 4

    8 command: CARREGA . $@2 IDENTIFIER $@3 IDENTIFIER $@4 exp exp

    $default  reduce using rule 5 ($@2)

    $@2  go to state 16


State 5

   18 command: TREINAMENTO . IDENTIFIER IDENTIFIER

    IDENTIFIER  shift, and go to state 17


State 6

   19 command: PREDICAO . IDENTIFIER IDENTIFIER

    IDENTIFIER  shift, and go to state 18


State 7

   20 command: RESULTADO . resultados

    IDENTIFIER  shift, and go to state 19

    resultados  go to state 20


State 8

   10 command: FALTANTES . $@5 IDENTIFIER exp

    $default  reduce using rule 9 ($@5)

    $@5  go to state 21


State 9

   13 command: DIVISAO . IDENTIFIER NUMINT

    IDENTIFIER  shift, and go to state 22


State 10

   11 command: ESCALONAR . IDENTIFIER

    IDENTIFIER  shift, and go to state 23


State 11

   12 command: TRANSFORMAR . IDENTIFIER IDENTIFIER

    IDENTIFIER  shift, and go to state 24


State 12

   15 command: CLASSIFICADOR . $@6 modelo

    $default  reduce using rule 14 ($@6)

    $@6  go to state 25


State 13

   17 command: REGRESSOR . $@7 modelo

    $default  reduce using rule 16 ($@7)

    $@7  go to state 26


State 14

    2 program: $@1 commands .

    $default  reduce using rule 2 (program)


State 15

    3 commands: command . ';' commands

    ';'  shift, and go to state 27


State 16

    8 command: CARREGA $@2 . IDENTIFIER $@3 IDENTIFIER $@4 exp exp

    IDENTIFIER  shift, and go to state 28


State 17

   18 command: TREINAMENTO IDENTIFIER . IDENTIFIER

    IDENTIFIER  shift, and go to state 29


State 18

   19 command: PREDICAO IDENTIFIER . IDENTIFIER

    IDENTIFIER  shift, and go to state 30


State 19

   22 resultados: IDENTIFIER . ACURACIA
   23           | IDENTIFIER . F1
   24           | IDENTIFIER . MSE
   25           | IDENTIFIER . R2

    ACURACIA  shift, and go to state 31
    F1        shift, and go to state 32
    MSE       shift, and go to state 33
    R2        shift, and go to state 34


State 20

   20 command: RESULTADO resultados .

    $default  reduce using rule 20 (command)


State 21

   10 command: FALTANTES $@5 . IDENTIFIER exp

    IDENTIFIER  shift, and go to state 35


State 22

   13 command: DIVISAO IDENTIFIER . NUMINT

    NUMINT  shift, and go to state 36


State 23

   11 command: ESCALONAR IDENTIFIER .

    $default  reduce using rule 11 (command)


State 24

   12 command: TRANSFORMAR IDENTIFIER . IDENTIFIER

    IDENTIFIER  shift, and go to state 37


State 25

   15 command: CLASSIFICADOR $@6 . modelo

    IDENTIFIER  shift, and go to state 38

    modelo  go to state 39


State 26

   17 command: REGRESSOR $@7 . modelo

    IDENTIFIER  shift, and go to state 38

    modelo  go to state 40


State 27

    3 commands: command ';' . commands

    CARREGA        shift, and go to state 4
    TREINAMENTO    shift, and go to state 5
    PREDICAO       shift, and go to state 6
    RESULTADO      shift, and go to state 7
    FALTANTES      shift, and go to state 8
    DIVISAO        shift, and go to state 9
    ESCALONAR      shift, and go to state 10
    TRANSFORMAR    shift, and go to state 11
    CLASSIFICADOR  shift, and go to state 12
    REGRESSOR      shift, and go to state 13

    $default  reduce using rule 4 (commands)

    commands  go to state 41
    command   go to state 15


State 28

    8 command: CARREGA $@2 IDENTIFIER . $@3 IDENTIFIER $@4 exp exp

    $default  reduce using rule 6 ($@3)

    $@3  go to state 42


State 29

   18 command: TREINAMENTO IDENTIFIER IDENTIFIER .

    $default  reduce using rule 18 (command)


State 30

   19 command: PREDICAO IDENTIFIER IDENTIFIER .

    $default  reduce using rule 19 (command)


State 31

   22 resultados: IDENTIFIER ACURACIA .

    $default  reduce using rule 22 (resultados)


State 32

   23 resultados: IDENTIFIER F1 .

    $default  reduce using rule 23 (resultados)


State 33

   24 resultados: IDENTIFIER MSE .

    $default  reduce using rule 24 (resultados)


State 34

   25 resultados: IDENTIFIER R2 .

    $default  reduce using rule 25 (resultados)


State 35

   10 command: FALTANTES $@5 IDENTIFIER . exp

    NUMINT      shift, and go to state 43
    IDENTIFIER  shift, and go to state 44

    $default  reduce using rule 28 (exp)

    exp  go to state 45


State 36

   13 command: DIVISAO IDENTIFIER NUMINT .

    $default  reduce using rule 13 (command)


State 37

   12 command: TRANSFORMAR IDENTIFIER IDENTIFIER .

    $default  reduce using rule 12 (command)


State 38

   21 modelo: IDENTIFIER . IDENTIFIER param param

    IDENTIFIER  shift, and go to state 46


State 39

   15 command: CLASSIFICADOR $@6 modelo .

    $default  reduce using rule 15 (command)


State 40

   17 command: REGRESSOR $@7 modelo .

    $default  reduce using rule 17 (command)


State 41

    3 commands: command ';' commands .

    $default  reduce using rule 3 (commands)


State 42

    8 command: CARREGA $@2 IDENTIFIER $@3 . IDENTIFIER $@4 exp exp

    IDENTIFIER  shift, and go to state 47


State 43

   26 exp: NUMINT .

    $default  reduce using rule 26 (exp)


State 44

   27 exp: IDENTIFIER .

    $default  reduce using rule 27 (exp)


State 45

   10 command: FALTANTES $@5 IDENTIFIER exp .

    $default  reduce using rule 10 (command)


State 46

   21 modelo: IDENTIFIER IDENTIFIER . param param

    NUMINT      shift, and go to state 48
    IDENTIFIER  shift, and go to state 49

    NUMINT      [reduce using rule 31 (param)]
    IDENTIFIER  [reduce using rule 31 (param)]
    $default    reduce using rule 31 (param)

    param  go to state 50


State 47

    8 command: CARREGA $@2 IDENTIFIER $@3 IDENTIFIER . $@4 exp exp

    $default  reduce using rule 7 ($@4)

    $@4  go to state 51


State 48

   29 param: NUMINT .

    $default  reduce using rule 29 (param)


State 49

   30 param: IDENTIFIER .

    $default  reduce using rule 30 (param)


State 50

   21 modelo: IDENTIFIER IDENTIFIER param . param

    NUMINT      shift, and go to state 48
    IDENTIFIER  shift, and go to state 49

    $default  reduce using rule 31 (param)

    param  go to state 52


State 51

    8 command: CARREGA $@2 IDENTIFIER $@3 IDENTIFIER $@4 . exp exp

    NUMINT      shift, and go to state 43
    IDENTIFIER  shift, and go to state 44

    NUMINT      [reduce using rule 28 (exp)]
    IDENTIFIER  [reduce using rule 28 (exp)]
    $default    reduce using rule 28 (exp)

    exp  go to state 53


State 52

   21 modelo: IDENTIFIER IDENTIFIER param param .

    $default  reduce using rule 21 (modelo)


State 53

    8 command: CARREGA $@2 IDENTIFIER $@3 IDENTIFIER $@4 exp . exp

    NUMINT      shift, and go to state 43
    IDENTIFIER  shift, and go to state 44

    $default  reduce using rule 28 (exp)

    exp  go to state 54


State 54

    8 command: CARREGA $@2 IDENTIFIER $@3 IDENTIFIER $@4 exp exp .

    $default  reduce using rule 8 (command)
